@@ -10,7 +10,7 @@ buildscript {
         classpath "org.grails:grails-gradle-plugin:$grailsVersion"
         classpath "gradle.plugin.com.energizedwork.webdriver-binaries:webdriver-binaries-gradle-plugin:1.1"
         classpath "gradle.plugin.com.energizedwork:idea-gradle-plugins:1.4"
-        classpath "org.grails.plugins:hibernate5:${gormVersion-".RELEASE"}"
+        classpath "org.grails.plugins:hibernate5:7.0.0"
         classpath "com.bertramlabs.plugins:asset-pipeline-gradle:$assetPluginVersion"
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
     }
@@ -30,12 +30,17 @@ apply plugin:"asset-pipeline"
 apply plugin:"org.grails.grails-gsp"
 
 configurations {
+    agent
     war{}
     bootWar{}
     pluginFiles {
         transitive = false
     }
     spa //dependency on grails-spa
+    developmentOnly
+    runtimeClasspath {
+        extendsFrom developmentOnly
+    }
 }
 
 repositories {
@@ -43,11 +48,10 @@ repositories {
     maven { url "https://repo.grails.org/grails/core" }
     maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
     maven { url "https://jitpack.io" }
-    flatDir dirs: "$rootDir/locallib"
 }
 
 dependencies {
-
+    agent "org.springframework:springloaded:1.2.8.RELEASE"
     //Rundeck plugin dependencies
     pluginFiles project.findProperty('bundledPlugins')?:[]
 
@@ -58,16 +62,14 @@ dependencies {
     compile project(':rundeck-storage:rundeck-storage-filesys')
 
     // From BuildConfig.groovy.
-    compile 'org.quartz-scheduler:quartz:2.3.1'
+    compile 'org.quartz-scheduler:quartz:2.3.2'
     compile 'org.grails.plugins:quartz:2.0.13'
-    //
-    //TODO: update to official mail plugin 2.0.1 once released
-    //compile 'org.grails.plugins:mail:2.0.1'
-    // using patch via jitpack https://jitpack.io/#grails3-plugins/mail/9435b0ac77
-    // pr: https://github.com/grails3-plugins/mail/pull/32
-    compile 'com.github.grails3-plugins:mail:9435b0ac77'
+    compile 'org.grails.plugins:mail:3.0.0'
 
-    compile 'com.codahale.metrics:metrics-core:3.0.2'
+    //enable greenmail plugin below for testing email behavior
+    // https://github.com/gpc/greenmail
+    //compile 'org.grails.plugins:greenmail:2.0.0.RC2'
+
     compile 'com.atlassian.commonmark:commonmark:0.11.0'
     compile 'com.atlassian.commonmark:commonmark-ext-gfm-tables:0.10.0'
     compile 'com.googlecode.owasp-java-html-sanitizer:owasp-java-html-sanitizer:20180219.1'
@@ -76,7 +78,7 @@ dependencies {
     compile 'commons-fileupload:commons-fileupload:1.3.3'
     compile 'commons-beanutils:commons-beanutils:1.9.4'
 
-    compile 'org.yaml:snakeyaml:1.24'
+    compile "org.yaml:snakeyaml:${snakeyamlVersion}"
     // Grails Plugins.
     //compile 'org.grails:grails-plugin-filters:3.0.17'
 
@@ -84,17 +86,27 @@ dependencies {
 //    compile "org.grails:grails-plugin-testing:3.2.11"
 
     // Defined by create-app
-    compile "org.grails.plugins:hibernate5:${gormVersion}"
+    compile "org.grails.plugins:hibernate5"
     compile "org.hibernate:hibernate-core:${hibernateVersion}"
-    compile "org.hibernate:hibernate-ehcache:${hibernateVersion}"
-    compile "org.springframework.boot:spring-boot-starter-logging"
+
+    compile( "org.hibernate:hibernate-jcache:${hibernateVersion}")
+    compile('org.ehcache:ehcache:3.8.1')
+
+    compile ('org.hibernate:hibernate-validator:6.0.19.Final'){
+        because 'https://snyk.io/vuln/SNYK-JAVA-ORGHIBERNATE-568162'
+    }
+    compile ('org.hibernate.validator:hibernate-validator:6.0.19.Final'){
+        because 'https://snyk.io/vuln/SNYK-JAVA-ORGHIBERNATE-568162'
+    }
+
+    compile "org.springframework.boot:spring-boot-starter-log4j2"
     compile "org.springframework.boot:spring-boot-autoconfigure"
+
     compile "org.grails:grails-core"
-    //compile "org.springframework.boot:spring-boot-starter-actuator"
-    //provided "org.springframework.boot:spring-boot-starter-tomcat"
-    provided("org.springframework.boot:spring-boot-starter-jetty") {
-        exclude(group:"org.eclipse.jetty", module:"jetty-util")
-        exclude(group:"org.eclipse.jetty", module:"jetty-security")
+    compile "org.springframework.boot:spring-boot-starter-actuator"
+    compile ("org.springframework.boot:spring-boot-starter-jetty") {
+        exclude(group:'org.eclipse.jetty.websocket',module:'websocket-server')
+        exclude(group:'org.eclipse.jetty.websocket',module:'javax-websocket-server-impl')
     }
     compile "org.grails:grails-web-boot"
     compile "org.grails:grails-logging"
@@ -105,68 +117,76 @@ dependencies {
     compile "org.grails:grails-plugin-url-mappings"
     compile "org.grails:grails-plugin-interceptors"
     compile 'org.grails.plugins:grails-executor:0.4'
-    compile "org.grails.plugins:cache"
     compile "org.grails.plugins:async"
     compile "org.grails.plugins:scaffolding"
     compile "org.grails.plugins:events"
     compile "org.grails.plugins:gsp"
-    compile "com.google.code.gson:gson:2.8.2"
+    compileOnly "io.micronaut:micronaut-inject-groovy"
+    compile "com.google.code.gson:gson:${gsonVersion}"
     compile "com.fasterxml.jackson.core:jackson-databind:${jacksonDatabindVersion}"
     compile "com.fasterxml.jackson.core:jackson-core"
     compile "com.fasterxml.jackson.core:jackson-annotations"
     compile "org.eclipse.jetty:jetty-jaas"
     compile "org.eclipse.jetty:jetty-util"
     compile "org.eclipse.jetty:jetty-security"
-    compile 'org.grails.plugins:spring-security-core:3.2.3'
-    compile 'org.kohsuke:libpam4j:1.10'
-    compile 'ca.juliusdavies:not-yet-commons-ssl:0.3.17'
-    compile "org.codehaus.groovy:groovy-all:${groovyVersion}"
+    compile ('org.grails.plugins:spring-security-core:4.0.2'){
+        exclude(group:'net.sf.ehcache',module:'ehcache')
+    }
+    compile 'org.kohsuke:libpam4j:1.11'
     compile "javax.xml.bind:jaxb-api:2.3.1"
-    compile 'org.dom4j:dom4j:2.1.1'
+    compile 'org.dom4j:dom4j:2.1.3'
+    compile ('org.bouncycastle:bcprov-jdk15on:1.66')
+    compile ('org.bouncycastle:bcpg-jdk15on:1.66')
     console ("org.grails:grails-console") {
         exclude(group:"org.yaml",module:"snakeyaml")
     }
+    compile group: 'org.apache.httpcomponents', name: 'httpclient', version: "${httpClientVersion}"
     profile "org.grails.profiles:web"
 //    runtime "org.springframework:spring-test:5.0.3.RELEASE"
-    runtime "org.glassfish.web:el-impl:2.1.2-b03"
     runtime "com.h2database:h2:1.4.199"
+    runtime 'org.apache.logging.log4j:log4j-web:2.13.3'
 
     // Database drivers
-    runtime 'mysql:mysql-connector-java:5.1.47'
     runtime 'com.microsoft.sqlserver:mssql-jdbc:6.4.0.jre8'
-    runtime 'org.mariadb.jdbc:mariadb-java-client:1.7.4'
-    runtime 'org.postgresql:postgresql:42.2.6'
+    runtime 'org.mariadb.jdbc:mariadb-java-client:2.7.0'
+    runtime 'org.postgresql:postgresql:42.2.13'
     runtime 'org.rundeck.hibernate:rundeck-oracle-dialect:1.0.0'
 
-
-    runtime "org.apache.tomcat:tomcat-jdbc"
+    runtime "org.codehaus.groovy:groovy-dateutil:${groovyVersion}"
+    runtime "org.apache.tomcat:tomcat-jdbc:9.0.39"
     runtime "com.bertramlabs.plugins:asset-pipeline-grails:$assetPluginVersion"
-    runtime "org.slf4j:jcl-over-slf4j:1.7.25"
-    assets "com.bertramlabs.plugins:less-asset-pipeline:$assetPluginVersion"
-    assets "com.bertramlabs.plugins:sass-asset-pipeline:$assetPluginVersion"
+    assets ("com.bertramlabs.plugins:less-asset-pipeline:$assetPluginVersion") {
+        exclude group: 'log4j', module: 'log4j'
+    }
+    assets ("com.bertramlabs.plugins:sass-asset-pipeline:$assetPluginVersion") {
+        exclude group: 'log4j', module: 'log4j'
+    }
     testCompile "org.grails:grails-gorm-testing-support"
+    testCompile "org.mockito:mockito-core"
     testCompile "org.grails:grails-web-testing-support"
     testCompile "org.grails.plugins:geb"
     testCompile "org.grails:grails-test-mixins:3.3.0.RC1"
-//    testCompile("org.spockframework:spock-core:1.0-groovy-2.4")
-//    testCompile("org.spockframework:spock-spring:1.1-groovy-2.4-rc-2")
+    testCompile "com.squareup.okhttp3:mockwebserver:4.7.2"
+    testCompile( "org.hibernate:hibernate-jcache:${hibernateVersion}")
+
     testRuntime "org.seleniumhq.selenium:selenium-chrome-driver"
     testRuntime "org.seleniumhq.selenium:selenium-firefox-driver"
     testRuntime "org.seleniumhq.selenium:selenium-remote-driver"
     testRuntime "org.seleniumhq.selenium:selenium-api"
+    testRuntime 'org.jetbrains.kotlin:kotlin-stdlib:1.3.70'
 
     // transitive dependencies constraints.
     constraints {
         compile("com.mchange:c3p0:0.9.5.4") {
             because "version brought by quartz affected by CVE-2019-5427"
         }
-        compile ('org.bouncycastle:bcprov-jdk15on:1.62') {
+        compile ('org.bouncycastle:bcprov-jdk15on:1.66') {
             because "earlier versions affected by exploitable bugs"
         }
-        compile ('org.bouncycastle:bcpg-jdk15on:1.62') {
+        compile ('org.bouncycastle:bcpg-jdk15on:1.66') {
             because "earlier versions affected by exploitable bugs"
         }
-        compile ('org.yaml:snakeyaml:1.24') {
+        compile ("org.yaml:snakeyaml:${snakeyamlVersion}") {
             because "required by rundeck:repository"
         }
 
@@ -177,11 +197,11 @@ dependencies {
 }
 grails{
     plugins{
-        compile project(':rundeckapp:metricsweb')
+        compile project(':grails-metricsweb')
         compile project(':grails-persistlocale')
         compile project(':grails-securityheaders')
-        compile project(':rundeckapp:repository')
-        compile project(':rundeckapp:webhooks')
+        compile project(':grails-repository')
+        compile project(':grails-webhooks')
 
         /** It's important that the configuration addition follow the form 'compile project("")'
          * so the Gradle magic happens. Other forms(ie 'compile proj' or 'compile project(proj)'
@@ -191,6 +211,7 @@ grails{
             compile project("$proj")
         }
     }
+    pathingJar = true
 }
 
 task copyRuntimeLibs(type: Copy) {
@@ -200,10 +221,27 @@ task copyRuntimeLibs(type: Copy) {
 
 bootRun {
     dependsOn 'copySpa', copyRuntimeLibs
-    jvmArgs('-Dspring.output.ansi.enabled=always')
+    main 'rundeckapp.Application'
+    ignoreExitValue true
+    jvmArgs(
+            '-Dspring.output.ansi.enabled=always',
+            '-noverify',
+            '-XX:TieredStopAtLevel=1',
+            '-Xmx2048m')
     systemProperties(System.properties)
+    String springProfilesActive = 'spring.profiles.active'
+    systemProperty springProfilesActive, System.getProperty(springProfilesActive)
     systemProperty "build.ident", project.version
-    addResources = true
+    sourceResources sourceSets.main
+    //    addResources = true
+    System.setProperty("logRoot",System.getProperty("rdeck.base",System.getProperty("user.dir")+"/rundeck-runtime"))
+    systemProperty "rundeck.server.logDir", System.getProperty("logRoot")+"/server/logs"
+}
+
+tasks.withType(GroovyCompile) {
+    configure(groovyOptions) {
+        forkOptions.jvmArgs = ['-Xmx1024m']
+    }
 }
 
 webdriverBinaries {
@@ -308,9 +346,9 @@ task copySpa(type: Copy) {
 }
 assetPluginPackage.dependsOn copySpa
 assetCompile.dependsOn copySpa
-
-war {
-    baseName='rundeck'
+archivesBaseName = 'rundeck'
+bootWar {
+    enabled=true
     it.dependsOn copyPluginLibs
 
     from("${buildDir}/WEB-INF/rundeck/plugins") {
@@ -319,46 +357,22 @@ war {
     from("templates") {
         into("templates")
     }
+    manifest {
+        attributes(
+            ['Add-Opens':'java.management/com.sun.jmx.mbeanserver java.base/java.io java.base/java.lang java.base/java.lang.invoke java.base/java.lang.reflect java.management/java.lang.management java.management/sun.management java.base/java.math java.base/java.net java.base/java.nio.charset java.base/java.nio.file java.base/java.nio.file.attribute java.base/java.security java.base/java.text java.base/java.time java.base/java.time.chrono java.base/java.util java.base/java.util.zip java.base/java.util.concurrent java.base/java.util.concurrent.atomic java.base/java.util.stream java.base/java.util.function java.logging/java.util.logging java.base/java.util.regex java.base/javax.crypto java.base/javax.security.auth java.base/javax.security.auth.login java.base/java.security.cert java.base/sun.nio.cs java.base/sun.nio.fs java.base/sun.security.util java.base/sun.net.www.protocol.jar java.xml/org.xml.sax java.xml/com.sun.org.apache.xerces.internal.impl java.xml/com.sun.org.apache.xerces.internal.dom java.sql/java.sql']
+        )
+    }
 }
-
-jar {
-    baseName='rundeck'
-}
-testJar {
-    baseName='rundeck'
-}
-
-// produce a jar file for our source files
-sourceJar {
-    baseName='rundeck'
-}
-
-// produce a jar file for our javadoc
-javadocJar {
-    baseName='rundeck'
-}
-
 
 artifacts {
     war war
-    bootWar file: war.archivePath, builtBy: bootRepackage
+    bootWar file: war.archivePath, builtBy: bootWar
 }
-
-//spring boot 1.5.x bootRepackage is not a good gradle citizen
-// will be fixed in 2.0 https://github.com/spring-projects/spring-boot/issues/1666
-[install, buildArchives, uploadArchives].each { it.dependsOn assemble }
-
+install.dependsOn assemble
 def signArchives = project.tasks.findByName('signArchives')
 if (signArchives) {
-    project.tasks.matching {it.name == "bootRepackage"}.each {
-        Set<Object> deps =  it.taskDependencies.mutableValues
-        def toBeRemoved = deps.find {
-            it.class.name.startsWith("org.gradle.api.internal.artifacts.DefaultPublishArtifactSet")
-        }
-        deps.removeAll(toBeRemoved)
-    }
-    bootRepackage.dependsOn(war)
-    signArchives.dependsOn(bootRepackage)
+    bootWar.dependsOn(war)
+    signArchives.dependsOn(bootWar)
 }
 
 clean {
@@ -370,12 +384,13 @@ bintray {
     key = findProperty("bintrayApiKey")
     publish = true
     dryRun = (findProperty('dryRun') ?: 'true').toBoolean()
+    override = true
 
     if (findProperty('bintrayUseExisting')) {
         filesSpec {
             from "$artifactDir/rundeckapp/build/libs"
             from "$artifactDir/rundeckapp/build/poms"
-            into "${project.group}.rundeck".replace('.', '/') + "/$version"
+            into "${project.group}.rundeck".replace('.', '/')
             exclude '*.original'
             rename { file ->
                 if (file =~ /^pom/)
@@ -389,7 +404,7 @@ bintray {
     }
 
     pkg {
-        repo = 'maven'
+        repo = 'rundeck-maven'
         name = 'rundeck'
         userOrg = 'rundeck'
 
